fix: css on login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,8 @@ document.addEventListener("DOMContentLoaded", function(){
         if (response_json.success) {
             let body = document.querySelector('body');
             body.style.display = 'block';
-            body.style.backgroundColor = 'rosybrown'
+            body.style.padding = '10px';
+            body.style.backgroundColor = 'white'
             body.innerHTML = response_json.message;
         }
     })
